# quintic

./: .gitignore  CMakeLists.txt  README.md  quintic.sln
quintic/: laguerre.cpp  main.cpp  quintic.hpp  quintic.vcxproj
src/: main.cpp  quintic.hpp
